--- a/.github/workflows/azzraelru-workflow.yml
+++ b/.github/workflows/azzraelru-workflow.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
+    name: Updated from azzrael.ru
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -14,4 +14,6 @@ jobs:
       - name: Pull in dev.to posts
         uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://azzrael.ru/feed,https://www.youtube.com/feeds/videos.xml?channel_id=UCf6kozNejHoQuFhBDB8cfxA"
+          comment_tag_name: "AZZRAELRU"
+          commit_message: "Updated from azzrael.ru"
+          feed_list: "https://azzrael.ru/feed"
